--- a/guis.ui
+++ b/guis.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>641</width>
-    <height>781</height>
+    <width>656</width>
+    <height>784</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -58,7 +58,7 @@
      <rect>
       <x>20</x>
       <y>460</y>
-      <width>581</width>
+      <width>611</width>
       <height>281</height>
      </rect>
     </property>
@@ -71,7 +71,7 @@
      <rect>
       <x>20</x>
       <y>180</y>
-      <width>581</width>
+      <width>611</width>
       <height>271</height>
      </rect>
     </property>
@@ -84,7 +84,7 @@
      <rect>
       <x>230</x>
       <y>20</y>
-      <width>371</width>
+      <width>401</width>
       <height>131</height>
      </rect>
     </property>
@@ -120,7 +120,7 @@
     <widget class="QPushButton" name="pushButton_4">
      <property name="geometry">
       <rect>
-       <x>140</x>
+       <x>130</x>
        <y>30</y>
        <width>121</width>
        <height>27</height>
@@ -133,7 +133,7 @@
     <widget class="QPushButton" name="pushButton_5">
      <property name="geometry">
       <rect>
-       <x>140</x>
+       <x>130</x>
        <y>70</y>
        <width>121</width>
        <height>27</height>
@@ -143,6 +143,19 @@
       <string>Stop Analysis</string>
      </property>
     </widget>
+    <widget class="QPushButton" name="pushButton_6">
+     <property name="geometry">
+      <rect>
+       <x>270</x>
+       <y>30</y>
+       <width>121</width>
+       <height>27</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Clear database</string>
+     </property>
+    </widget>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
@@ -150,7 +163,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>641</width>
+     <width>656</width>
      <height>21</height>
     </rect>
    </property>
