--- a/setupWindow.ui
+++ b/setupWindow.ui
@@ -20,7 +20,7 @@
       <x>30</x>
       <y>10</y>
       <width>541</width>
-      <height>281</height>
+      <height>231</height>
      </rect>
     </property>
     <property name="title">
@@ -142,9 +142,9 @@
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>300</y>
+      <y>230</y>
       <width>541</width>
-      <height>331</height>
+      <height>441</height>
      </rect>
     </property>
     <property name="title">
@@ -187,14 +187,66 @@
      <property name="geometry">
       <rect>
        <x>20</x>
-       <y>120</y>
+       <y>230</y>
        <width>501</width>
-       <height>181</height>
+       <height>101</height>
       </rect>
      </property>
      <property name="title">
-      <string>Database and Storage Options</string>
+      <string>Database Tables</string>
      </property>
+     <widget class="QCheckBox" name="checkBox_2">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>30</y>
+        <width>131</width>
+        <height>23</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Acquired</string>
+      </property>
+     </widget>
+     <widget class="QCheckBox" name="checkBox_3">
+      <property name="geometry">
+       <rect>
+        <x>160</x>
+        <y>30</y>
+        <width>251</width>
+        <height>23</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Seg Cells and Channel Detection</string>
+      </property>
+     </widget>
+     <widget class="QCheckBox" name="checkBox_4">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>60</y>
+        <width>91</width>
+        <height>23</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>DeadAlive</string>
+      </property>
+     </widget>
+     <widget class="QCheckBox" name="checkBox_5">
+      <property name="geometry">
+       <rect>
+        <x>120</x>
+        <y>60</y>
+        <width>131</width>
+        <height>23</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>GrowthRates</string>
+      </property>
+     </widget>
     </widget>
     <widget class="QWidget" name="horizontalLayoutWidget_7">
      <property name="geometry">
@@ -215,14 +267,40 @@
       </item>
      </layout>
     </widget>
+    <widget class="QWidget" name="horizontalLayoutWidget_8">
+     <property name="geometry">
+      <rect>
+       <x>20</x>
+       <y>120</y>
+       <width>431</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <layout class="QHBoxLayout" name="horizontalLayout_8">
+      <item>
+       <widget class="QCheckBox" name="checkBox_6">
+        <property name="text">
+         <string>DeadAlive</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QCheckBox" name="checkBox_7">
+        <property name="text">
+         <string>Growth Rates</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
    </widget>
    <widget class="QWidget" name="horizontalLayoutWidget_2">
     <property name="geometry">
      <rect>
-      <x>340</x>
-      <y>660</y>
+      <x>350</x>
+      <y>700</y>
       <width>221</width>
-      <height>80</height>
+      <height>51</height>
      </rect>
     </property>
     <layout class="QHBoxLayout" name="horizontalLayout_2">
