Expt setup box done

--- a/setupWindow.ui
+++ b/setupWindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>593</width>
-    <height>594</height>
+    <width>757</width>
+    <height>760</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -88,15 +88,27 @@
         <property name="text">
          <string>File</string>
         </property>
-        <property name="checked">
+        <property name="checkable">
          <bool>true</bool>
+        </property>
+        <property name="checked">
+         <bool>false</bool>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QRadioButton" name="fromMicroManager">
+        <property name="enabled">
+         <bool>true</bool>
+        </property>
         <property name="text">
          <string>Micromanager</string>
+        </property>
+        <property name="checkable">
+         <bool>true</bool>
+        </property>
+        <property name="checked">
+         <bool>false</bool>
         </property>
        </widget>
       </item>
@@ -305,7 +317,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>593</width>
+     <width>757</width>
      <height>21</height>
     </rect>
    </property>
