Working on main window now

--- a/mainWindow.ui
+++ b/mainWindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>980</width>
-    <height>837</height>
+    <width>904</width>
+    <height>862</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -39,7 +39,7 @@
       <string>Setup</string>
      </property>
     </widget>
-    <widget class="QPushButton" name="viewButton">
+    <widget class="QPushButton" name="viewExptSetupButton">
      <property name="geometry">
       <rect>
        <x>10</x>
@@ -294,7 +294,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>980</width>
+     <width>904</width>
      <height>21</height>
     </rect>
    </property>
