--- a/mainWindow.ui
+++ b/mainWindow.ui
@@ -124,7 +124,7 @@
      <rect>
       <x>230</x>
       <y>20</y>
-      <width>481</width>
+      <width>541</width>
       <height>151</height>
      </rect>
     </property>
@@ -144,7 +144,7 @@
       <string>Stop Expt</string>
      </property>
     </widget>
-    <widget class="QPushButton" name="pushButton_3">
+    <widget class="QPushButton" name="startExptButton">
      <property name="geometry">
       <rect>
        <x>20</x>
@@ -170,7 +170,7 @@
       <string>Start Analysis</string>
      </property>
     </widget>
-    <widget class="QPushButton" name="pushButton_5">
+    <widget class="QPushButton" name="stopAnalysisButton">
      <property name="geometry">
       <rect>
        <x>130</x>
@@ -186,7 +186,7 @@
     <widget class="QPushButton" name="createDbButton">
      <property name="geometry">
       <rect>
-       <x>260</x>
+       <x>270</x>
        <y>30</y>
        <width>121</width>
        <height>27</height>
@@ -196,26 +196,26 @@
       <string>Create database</string>
      </property>
     </widget>
-    <widget class="QPushButton" name="pushButton_8">
+    <widget class="QPushButton" name="moveToPosition">
      <property name="geometry">
       <rect>
        <x>20</x>
        <y>110</y>
-       <width>111</width>
-       <height>23</height>
+       <width>121</width>
+       <height>27</height>
       </rect>
      </property>
      <property name="text">
       <string>Move To Position No</string>
      </property>
     </widget>
-    <widget class="QPushButton" name="pushButton_9">
+    <widget class="QPushButton" name="tweezePosition">
      <property name="geometry">
       <rect>
-       <x>140</x>
+       <x>180</x>
        <y>110</y>
        <width>121</width>
-       <height>23</height>
+       <height>27</height>
       </rect>
      </property>
      <property name="text">
@@ -225,10 +225,10 @@
     <widget class="QPushButton" name="createTablesButton">
      <property name="geometry">
       <rect>
-       <x>260</x>
-       <y>80</y>
-       <width>111</width>
-       <height>21</height>
+       <x>270</x>
+       <y>70</y>
+       <width>121</width>
+       <height>27</height>
       </rect>
      </property>
      <property name="text">
