--- a/mainWindow.ui
+++ b/mainWindow.ui
@@ -57,14 +57,65 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>430</y>
+      <y>460</y>
       <width>621</width>
-      <height>311</height>
+      <height>301</height>
      </rect>
     </property>
     <property name="title">
      <string>Viewer</string>
     </property>
+    <widget class="QLabel" name="label_5">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>20</y>
+       <width>47</width>
+       <height>13</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>10</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string>Position:</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="lineEdit">
+     <property name="geometry">
+      <rect>
+       <x>70</x>
+       <y>20</y>
+       <width>113</width>
+       <height>20</height>
+      </rect>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_6">
+     <property name="geometry">
+      <rect>
+       <x>200</x>
+       <y>20</y>
+       <width>71</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Channel No:</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="lineEdit_2">
+     <property name="geometry">
+      <rect>
+       <x>270</x>
+       <y>20</y>
+       <width>113</width>
+       <height>20</height>
+      </rect>
+     </property>
+    </widget>
    </widget>
    <widget class="QGroupBox" name="runStatus">
     <property name="geometry">
@@ -72,7 +123,7 @@
       <x>20</x>
       <y>180</y>
       <width>861</width>
-      <height>241</height>
+      <height>271</height>
      </rect>
     </property>
     <property name="title">
@@ -82,7 +133,7 @@
      <property name="geometry">
       <rect>
        <x>20</x>
-       <y>30</y>
+       <y>70</y>
        <width>181</width>
        <height>181</height>
       </rect>
@@ -92,7 +143,7 @@
      <property name="geometry">
       <rect>
        <x>230</x>
-       <y>30</y>
+       <y>70</y>
        <width>181</width>
        <height>181</height>
       </rect>
@@ -102,7 +153,7 @@
      <property name="geometry">
       <rect>
        <x>440</x>
-       <y>30</y>
+       <y>70</y>
        <width>181</width>
        <height>181</height>
       </rect>
@@ -112,10 +163,106 @@
      <property name="geometry">
       <rect>
        <x>650</x>
-       <y>30</y>
+       <y>70</y>
        <width>181</width>
        <height>181</height>
       </rect>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label">
+     <property name="geometry">
+      <rect>
+       <x>20</x>
+       <y>40</y>
+       <width>101</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>10</pointsize>
+      </font>
+     </property>
+     <property name="midLineWidth">
+      <number>0</number>
+     </property>
+     <property name="text">
+      <string>Images Acquired</string>
+     </property>
+     <property name="textFormat">
+      <enum>Qt::PlainText</enum>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_2">
+     <property name="geometry">
+      <rect>
+       <x>240</x>
+       <y>40</y>
+       <width>131</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>10</pointsize>
+      </font>
+     </property>
+     <property name="midLineWidth">
+      <number>0</number>
+     </property>
+     <property name="text">
+      <string>Images Segmented</string>
+     </property>
+     <property name="textFormat">
+      <enum>Qt::PlainText</enum>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_3">
+     <property name="geometry">
+      <rect>
+       <x>440</x>
+       <y>40</y>
+       <width>131</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>10</pointsize>
+      </font>
+     </property>
+     <property name="midLineWidth">
+      <number>0</number>
+     </property>
+     <property name="text">
+      <string>Dead Alive</string>
+     </property>
+     <property name="textFormat">
+      <enum>Qt::PlainText</enum>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_4">
+     <property name="geometry">
+      <rect>
+       <x>650</x>
+       <y>40</y>
+       <width>131</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>10</pointsize>
+      </font>
+     </property>
+     <property name="midLineWidth">
+      <number>0</number>
+     </property>
+     <property name="text">
+      <string>Growth Rates</string>
+     </property>
+     <property name="textFormat">
+      <enum>Qt::PlainText</enum>
      </property>
     </widget>
    </widget>
@@ -193,7 +340,7 @@
       </rect>
      </property>
      <property name="text">
-      <string>Create database</string>
+      <string>Clear database</string>
      </property>
     </widget>
     <widget class="QPushButton" name="moveToPosition">
@@ -232,7 +379,7 @@
       </rect>
      </property>
      <property name="text">
-      <string>Create tables</string>
+      <string>Clear tables</string>
      </property>
     </widget>
    </widget>
@@ -240,9 +387,9 @@
     <property name="geometry">
      <rect>
       <x>650</x>
-      <y>430</y>
+      <y>460</y>
       <width>231</width>
-      <height>311</height>
+      <height>301</height>
      </rect>
     </property>
     <property name="title">
@@ -278,8 +425,8 @@
    <widget class="QPushButton" name="resetButton">
     <property name="geometry">
      <rect>
-      <x>670</x>
-      <y>760</y>
+      <x>610</x>
+      <y>780</y>
       <width>75</width>
       <height>23</height>
      </rect>
