--- a/mainWindow.ui
+++ b/mainWindow.ui
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>MainWindow</class>
- <widget class="QMainWindow" name="MainWindow">
+ <class>dbPlotWindow</class>
+ <widget class="QMainWindow" name="dbPlotWindow">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>904</width>
-    <height>862</height>
+    <height>858</height>
    </rect>
   </property>
   <property name="windowTitle">
