--- a/dbPlotTest.ui
+++ b/dbPlotTest.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>458</width>
-    <height>437</height>
+    <width>922</width>
+    <height>725</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -50,13 +50,23 @@
      <string>Start Plotting</string>
     </property>
    </widget>
+   <widget class="PlotWidget" name="scatterPlot">
+    <property name="geometry">
+     <rect>
+      <x>370</x>
+      <y>80</y>
+      <width>271</width>
+      <height>221</height>
+     </rect>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>458</width>
+     <width>922</width>
      <height>21</height>
     </rect>
    </property>
@@ -66,6 +76,11 @@
  <customwidgets>
   <customwidget>
    <class>ImageView</class>
+   <extends>QGraphicsView</extends>
+   <header>pyqtgraph</header>
+  </customwidget>
+  <customwidget>
+   <class>PlotWidget</class>
    <extends>QGraphicsView</extends>
    <header>pyqtgraph</header>
   </customwidget>
