Done playing around.. moving GUI stuff to narsil

--- a/mainWindow.ui
+++ b/mainWindow.ui
@@ -116,6 +116,19 @@
       </rect>
      </property>
     </widget>
+    <widget class="QPushButton" name="pushButton">
+     <property name="geometry">
+      <rect>
+       <x>410</x>
+       <y>20</y>
+       <width>75</width>
+       <height>23</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Get</string>
+     </property>
+    </widget>
    </widget>
    <widget class="QGroupBox" name="runStatus">
     <property name="geometry">
