Testes processes and GUI .. no UI hangup .. YAY git add --all

--- a/dbPlotTest.ui
+++ b/dbPlotTest.ui
@@ -60,6 +60,32 @@
      </rect>
     </property>
    </widget>
+   <widget class="QPushButton" name="processButton">
+    <property name="geometry">
+     <rect>
+      <x>290</x>
+      <y>30</y>
+      <width>75</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Start Process</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="terminateButton">
+    <property name="geometry">
+     <rect>
+      <x>400</x>
+      <y>30</y>
+      <width>111</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Terminate Process</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
